# openwifi-afc

./: README.md  afc.toml  pyproject.toml
openwifi_afc/: __main__.py  afc.py  openwifi.py
